<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000CD"
    android:padding="5dp">

    <TextView
        style="@style/default_style_text_view"
        android:textSize="30sp"
        android:id="@+id/locationTextView"
        android:text="@string/default_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/timeTextView"
        style="@style/default_style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
        tools:text="Monday 20:30" />

    <TextView
        android:id="@+id/temperatureTextView"
        style="@style/default_style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryTextView"
        app:layout_constraintVertical_bias="0.142"
        tools:text="30" />

    <TextView
        android:id="@+id/summaryTextView"
        style="@style/default_style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView"
        tools:text="Clear sky" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toTopOf="@+id/precipitationLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/temperatureTextView"
        app:srcCompat="@drawable/degree" />

    <TextView
        android:id="@+id/temperatureMaxLabel"
        style="@style/default_style_text_view"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/humidityLabel"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/precipitationLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/humidityValueTextView"
        style="@style/default_style_text_view"
        android:layout_width="39dp"
        android:layout_height="33dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMaxLabel"
        app:layout_constraintVertical_bias="0.032"
        tools:text="0.6" />

    <TextView
        android:id="@+id/precipitationValueTextView"
        style="@style/default_style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toEndOf="@+id/humidityValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/precipitationLabel"
        app:layout_constraintVertical_bias="0.032"
        tools:text="10%" />

    <TextView
        android:id="@+id/precipitationLabel"
        style="@style/default_style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="64dp"
        android:text="@string/precipitationLabel"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <Button
        android:id="@+id/dailyActivityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_shape"
        android:padding="5dp"
        android:text="@string/daily_forecast_button"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityValueTextView" />

    <Button
        android:id="@+id/hourly_forecast_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_shape"
        android:padding="5dp"
        android:text="@string/hourly_forecast_button"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyActivityButton"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>